--- a/Uvoo/Uvoo/UvooCommuntyVC/UvooComTitleDetailVC.xib
+++ b/Uvoo/Uvoo/UvooCommuntyVC/UvooComTitleDetailVC.xib
@@ -18,13 +18,16 @@
                 <outlet property="comment_text" destination="bYM-OA-4yh" id="doc-fx-dtI"/>
                 <outlet property="comment_title" destination="W1o-z7-1sA" id="keG-L1-AcT"/>
                 <outlet property="headUser" destination="yOh-8j-Jjy" id="d1n-mX-1Xh"/>
+                <outlet property="imgeScroll" destination="9Eo-06-PHX" id="2oU-CG-ri6"/>
                 <outlet property="input_view" destination="YgU-xU-wMF" id="xhT-s0-kLy"/>
                 <outlet property="like_text" destination="1Az-x1-5c0" id="6lr-94-m36"/>
                 <outlet property="like_title" destination="b4Q-lH-qy8" id="GSc-XN-Tci"/>
+                <outlet property="nameUser" destination="v9m-Kk-dSg" id="BON-V5-gFM"/>
                 <outlet property="textComment" destination="pIy-wF-PTh" id="UVo-Wm-nMD"/>
                 <outlet property="titleContainer" destination="hqs-IH-gey" id="McT-CL-5sI"/>
-                <outlet property="titleContent" destination="m25-7Q-AIe" id="c53-lx-wwG"/>
+                <outlet property="titleContent" destination="YwP-KM-W41" id="vFV-Cu-W1a"/>
                 <outlet property="titleTopic" destination="Hlt-OR-Zk4" id="Wse-bQ-PPr"/>
+                <outlet property="userDetails" destination="xZY-Vz-RbZ" id="oeu-7f-S6l"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -68,6 +71,10 @@
                                         <constraint firstAttribute="width" constant="35" id="Uxa-gx-xBW"/>
                                     </constraints>
                                 </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZY-Vz-RbZ">
+                                    <rect key="frame" x="0.0" y="7.6666666666666572" width="35" height="35"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9m-Kk-dSg">
                                     <rect key="frame" x="45" y="17.333333333333343" width="36.666666666666657" height="15.666666666666664"/>
                                     <fontDescription key="fontDescription" name="Arial-BoldItalicMT" family="Arial" pointSize="14"/>
@@ -77,25 +84,39 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="xZY-Vz-RbZ" firstAttribute="top" secondItem="yOh-8j-Jjy" secondAttribute="top" id="29L-5h-jdI"/>
                                 <constraint firstItem="v9m-Kk-dSg" firstAttribute="centerY" secondItem="ZCa-1W-42U" secondAttribute="centerY" id="2T9-Ii-vgf"/>
+                                <constraint firstItem="xZY-Vz-RbZ" firstAttribute="trailing" secondItem="yOh-8j-Jjy" secondAttribute="trailing" id="7vx-0e-Ldj"/>
+                                <constraint firstItem="xZY-Vz-RbZ" firstAttribute="bottom" secondItem="yOh-8j-Jjy" secondAttribute="bottom" id="KLx-4C-Gwp"/>
                                 <constraint firstItem="v9m-Kk-dSg" firstAttribute="leading" secondItem="yOh-8j-Jjy" secondAttribute="trailing" constant="10" id="Zgf-ay-LAv"/>
                                 <constraint firstItem="yOh-8j-Jjy" firstAttribute="centerY" secondItem="ZCa-1W-42U" secondAttribute="centerY" id="fm8-sL-0rF"/>
                                 <constraint firstAttribute="height" constant="50" id="iqw-gn-2Rh"/>
+                                <constraint firstItem="xZY-Vz-RbZ" firstAttribute="leading" secondItem="yOh-8j-Jjy" secondAttribute="leading" id="tT7-Op-95o"/>
                                 <constraint firstItem="yOh-8j-Jjy" firstAttribute="leading" secondItem="ZCa-1W-42U" secondAttribute="leading" id="v6l-Ld-xPv"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hlt-OR-Zk4" userLabel="title">
-                            <rect key="frame" x="16" y="59.999999999999993" width="329" height="19.666666666666664"/>
+                            <rect key="frame" x="16" y="55" width="329" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="fzg-go-kd2"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="PingFangSC-Light" family="PingFang SC" pointSize="14"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m25-7Q-AIe" userLabel="content">
-                            <rect key="frame" x="16" y="89.666666666666657" width="329" height="19.666666666666671"/>
-                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Eo-06-PHX">
+                            <rect key="frame" x="10" y="140" width="341" height="127.66666666666669"/>
+                        </scrollView>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="YwP-KM-W41">
+                            <rect key="frame" x="11" y="75" width="339" height="55"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="55" id="vJN-va-mp5"/>
+                            </constraints>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                            <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="12"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vzd-Qv-SgY" userLabel="Comment">
                             <rect key="frame" x="0.0" y="277.66666666666674" width="361" height="416.33333333333326"/>
                             <subviews>
@@ -191,9 +212,8 @@
                                         <constraint firstItem="pT4-IB-UnP" firstAttribute="leading" secondItem="qGd-OA-SNn" secondAttribute="leading" constant="16" id="mUy-mx-5Wc"/>
                                     </constraints>
                                 </view>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9hs-Nu-GkS">
-                                    <rect key="frame" x="16" y="41" width="329" height="325.33333333333331"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9hs-Nu-GkS">
+                                    <rect key="frame" x="16" y="51" width="329" height="315.33333333333331"/>
                                 </tableView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgU-xU-wMF" userLabel="Input">
                                     <rect key="frame" x="15" y="371.33333333333331" width="331" height="30"/>
@@ -232,7 +252,7 @@
                                 <constraint firstItem="9hs-Nu-GkS" firstAttribute="centerX" secondItem="Vzd-Qv-SgY" secondAttribute="centerX" id="EVZ-eS-OO7"/>
                                 <constraint firstItem="qGd-OA-SNn" firstAttribute="leading" secondItem="Vzd-Qv-SgY" secondAttribute="leading" id="JD6-I8-YeF"/>
                                 <constraint firstItem="YgU-xU-wMF" firstAttribute="top" secondItem="9hs-Nu-GkS" secondAttribute="bottom" constant="5" id="KCy-5s-eQQ"/>
-                                <constraint firstItem="9hs-Nu-GkS" firstAttribute="top" secondItem="qGd-OA-SNn" secondAttribute="bottom" id="YSX-kS-86l"/>
+                                <constraint firstItem="9hs-Nu-GkS" firstAttribute="top" secondItem="qGd-OA-SNn" secondAttribute="bottom" constant="10" id="YSX-kS-86l"/>
                                 <constraint firstAttribute="trailing" secondItem="qGd-OA-SNn" secondAttribute="trailing" id="amz-wl-9UJ"/>
                                 <constraint firstAttribute="bottom" secondItem="YgU-xU-wMF" secondAttribute="bottom" constant="15" id="bNA-nY-X3P"/>
                                 <constraint firstItem="YgU-xU-wMF" firstAttribute="leading" secondItem="Vzd-Qv-SgY" secondAttribute="leading" constant="15" id="diX-WT-gF7"/>
@@ -242,23 +262,28 @@
                     </subviews>
                     <color key="backgroundColor" red="0.22745098039215686" green="0.0" blue="1" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
+                        <constraint firstItem="9Eo-06-PHX" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="10" id="3Za-x8-8Zp"/>
                         <constraint firstItem="Vzd-Qv-SgY" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" id="5Ms-02-sDF"/>
                         <constraint firstItem="Vzd-Qv-SgY" firstAttribute="centerX" secondItem="hqs-IH-gey" secondAttribute="centerX" id="67a-LQ-APM"/>
-                        <constraint firstItem="Hlt-OR-Zk4" firstAttribute="top" secondItem="ZCa-1W-42U" secondAttribute="bottom" constant="10" id="A0U-5P-IYx"/>
+                        <constraint firstItem="Hlt-OR-Zk4" firstAttribute="top" secondItem="ZCa-1W-42U" secondAttribute="bottom" constant="5" id="A0U-5P-IYx"/>
+                        <constraint firstAttribute="trailing" secondItem="9Eo-06-PHX" secondAttribute="trailing" constant="10" id="IIL-BM-k9e"/>
                         <constraint firstItem="ZCa-1W-42U" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="16" id="Ily-LL-JM1"/>
                         <constraint firstAttribute="trailing" secondItem="VsV-AB-HWM" secondAttribute="trailing" id="SN0-BM-Id1"/>
                         <constraint firstItem="ZCa-1W-42U" firstAttribute="top" secondItem="hqs-IH-gey" secondAttribute="top" id="T3G-PV-P8z"/>
                         <constraint firstItem="Vzd-Qv-SgY" firstAttribute="height" secondItem="hqs-IH-gey" secondAttribute="height" multiplier="0.6" id="UCM-HZ-hPE"/>
                         <constraint firstItem="VsV-AB-HWM" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="10" id="Wxs-Y6-4Is"/>
-                        <constraint firstItem="m25-7Q-AIe" firstAttribute="centerX" secondItem="hqs-IH-gey" secondAttribute="centerX" id="YXf-cr-F8g"/>
+                        <constraint firstItem="9Eo-06-PHX" firstAttribute="top" secondItem="YwP-KM-W41" secondAttribute="bottom" constant="10" id="Z8I-em-EJC"/>
                         <constraint firstAttribute="trailing" secondItem="ZCa-1W-42U" secondAttribute="trailing" id="aFA-Rp-pV1"/>
                         <constraint firstItem="Hlt-OR-Zk4" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="16" id="aQs-Zp-WI8"/>
-                        <constraint firstItem="m25-7Q-AIe" firstAttribute="top" secondItem="Hlt-OR-Zk4" secondAttribute="bottom" constant="10" id="cck-WR-PRI"/>
                         <constraint firstItem="Hlt-OR-Zk4" firstAttribute="centerX" secondItem="hqs-IH-gey" secondAttribute="centerX" id="eBp-AP-7xe"/>
+                        <constraint firstItem="Vzd-Qv-SgY" firstAttribute="top" secondItem="9Eo-06-PHX" secondAttribute="bottom" constant="10" id="ero-JD-aiL"/>
+                        <constraint firstItem="YwP-KM-W41" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="11" id="ghG-dj-AeL"/>
+                        <constraint firstItem="9Eo-06-PHX" firstAttribute="centerX" secondItem="hqs-IH-gey" secondAttribute="centerX" id="h3c-Mb-r0v"/>
+                        <constraint firstItem="YwP-KM-W41" firstAttribute="top" secondItem="Hlt-OR-Zk4" secondAttribute="bottom" id="i0F-09-iIB"/>
                         <constraint firstItem="Vzd-Qv-SgY" firstAttribute="top" secondItem="VsV-AB-HWM" secondAttribute="bottom" constant="-10" id="lBa-rB-TEx"/>
                         <constraint firstAttribute="bottom" secondItem="Vzd-Qv-SgY" secondAttribute="bottom" id="pD7-sa-xbL"/>
-                        <constraint firstItem="m25-7Q-AIe" firstAttribute="leading" secondItem="hqs-IH-gey" secondAttribute="leading" constant="16" id="qUG-ob-6cT"/>
                         <constraint firstItem="VsV-AB-HWM" firstAttribute="top" secondItem="hqs-IH-gey" secondAttribute="top" id="w6k-j4-8O2"/>
+                        <constraint firstAttribute="trailing" secondItem="YwP-KM-W41" secondAttribute="trailing" constant="11" id="wf8-cz-q1I"/>
                     </constraints>
                 </view>
             </subviews>
@@ -277,7 +302,7 @@
                 <constraint firstItem="rEJ-K7-4Y6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="aSr-ms-7ij"/>
                 <constraint firstItem="hqs-IH-gey" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="uHS-qM-h0j"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="-11"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-11.267605633802818"/>
         </view>
     </objects>
     <resources>
