--- a/Uvoo/Uvoo/UvooMeVC/UvooUserInfoViewVC.xib
+++ b/Uvoo/Uvoo/UvooMeVC/UvooUserInfoViewVC.xib
@@ -22,6 +22,7 @@
                 <outlet property="userLike" destination="IDS-zf-kgn" id="nZA-Ks-ojB"/>
                 <outlet property="userNoData" destination="G49-T3-fB8" id="J2L-wO-nPu"/>
                 <outlet property="userPost" destination="oqm-j8-WoJ" id="iAA-1W-HyD"/>
+                <outlet property="view" destination="QfD-v8-5sk" id="uY3-X2-bdV"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -39,7 +40,7 @@
                     <rect key="frame" x="16" y="59" width="361" height="43"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W3A-4W-W8c" userLabel="back">
-                            <rect key="frame" x="0.0" y="1.3333333333333357" width="40.666666666666686" height="40.666666666666664"/>
+                            <rect key="frame" x="0.0" y="1.3333333333333357" width="40.666666666666664" height="40.666666666666664"/>
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="btnBack_black"/>
